# opengl-hyperbolic

./: .gitignore  README.md  opengl-hyperbolic.cabal  stack.yaml
src/: Dodecahedron.hs  DodecahedronU.hs  DodecahedronU2.hs  Gyro.hs  Gyro2.hs  GyroU.hs  GyrosegmentU.hs  Icosidodecahedron.hs  Tetrahedron.hs  Triangle.hs  Utils.hs
