name:                opengl-hyperbolic
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stla/opengl-hyperbolic#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Gyro2
                     , Triangle
                     , Utils
                     , Tetrahedron
                     , Dodecahedron
                     , Icosidodecahedron
                     , GyroU
                     , DodecahedronU
                     , GyrosegmentU
                     , DodecahedronU2
  build-depends:       base >= 4.7 && < 5
                     , OpenGL
                     , GLUT
                     , gl-capture
                     , bytestring
                     , linear
                     , directory
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stla/opengl-hyperbolic
